--- a/app/index.html
+++ b/app/index.html
@@ -65,53 +65,54 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src='bower_components/jquery/dist/jquery.js'></script>
-    <script src='bower_components/angular/angular.js'></script>
-    <script src='bower_components/angular-animate/angular-animate.js'></script>
-    <script src='bower_components/angular-cookies/angular-cookies.js'></script>
-    <script src='bower_components/angular-resource/angular-resource.js'></script>
-    <script src='bower_components/angular-route/angular-route.js'></script>
-    <script src='bower_components/angular-sanitize/angular-sanitize.js'></script>
-    <script src='bower_components/angular-touch/angular-touch.js'></script>
-    <script src='bower_components/angular-ui-router/release/angular-ui-router.js'></script>
-    <script src='bower_components/firebase/firebase.js'></script>
-    <script src='bower_components/angularfire/dist/angularfire.js'></script>
-    <script src='bower_components/bootstrap-css/js/bootstrap.min.js'></script>
-    <script src='bower_components/sweetalert/dist/sweetalert.min.js'></script>
-    <script src='bower_components/angular-bootstrap/ui-bootstrap-tpls.js'></script>
-    <script src='bower_components/jsTree-directive/jsTree.directive.js'></script>
-    <script src='bower_components/jstree/dist/jstree.js'></script>
-    <script src='bower_components/angularUtils-pagination/dirPagination.js'></script>
-    <script src='bower_components/toastr/toastr.js'></script>
-    <script src='bower_components/cropperjs/dist/cropper.js'></script>
-    <script src='bower_components/intl-tel-input/build/js/intlTelInput.min.js'></script>
-    <script src='bower_components/intl-tel-input/lib/libphonenumber/build/utils.js'></script>
-    <script src='bower_components/international-phone-number/releases/international-phone-number.js'></script>
-    <script src='bower_components/ng-img-crop/compile/minified/ng-img-crop.js'></script>
-    <script src='bower_components/moment/min/moment.min.js'></script>
-    <script src='bower_components/moment/locale/es.js'></script>
-    <script src='bower_components/ngDatepicker/src/js/ngDatepicker.js'></script>
-    <script src='bower_components/js-xls/dist/xls.js'></script>
-    <script src='bower_components/js-xlsx/dist/xlsx.js'></script>
-    <script src='bower_components/es6-promise/promise.js'></script>
-    <script src='bower_components/alasql/dist/alasql.min.js'></script>
-    <script src='bower_components/iCheck/icheck.min.js'></script>
-    <script src='bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js'></script>
-    <script src='bower_components/sifter/sifter.js'></script>
-    <script src='bower_components/microplugin/src/microplugin.js'></script>
-    <script src='bower_components/selectize/dist/js/selectize.js'></script>
-    <script src='bower_components/angular-selectize2/dist/angular-selectize.js'></script>
-    <script src='bower_components/handlebars/handlebars.js'></script>
-    <script src='bower_components/angular-recaptcha/release/angular-recaptcha.js'></script>
-    <script src='bower_components/metisMenu/dist/metisMenu.js'></script>
-    <script src='bower_components/angular-preload-image/angular-preload-image.js'></script>
-    <script src='bower_components/angular-hotkeys/build/hotkeys.js'></script>
-    <script src='bower_components/bootstrap/dist/js/bootstrap.js'></script>
-    <script src='bower_components/angular-ui-utils/ui-utils.js'></script>
-    <script src='bower_components/angular-ui-map/ui-map.js'></script>
-    <script src='bower_components/colorpicker/dist/colorPicker.js'></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="bower_components/bootstrap-css/js/bootstrap.min.js"></script>
+    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/jsTree-directive/jsTree.directive.js"></script>
+    <script src="bower_components/jstree/dist/jstree.js"></script>
+    <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/cropperjs/dist/cropper.js"></script>
+    <script src="bower_components/intl-tel-input/build/js/intlTelInput.min.js"></script>
+    <script src="bower_components/intl-tel-input/lib/libphonenumber/build/utils.js"></script>
+    <script src="bower_components/international-phone-number/releases/international-phone-number.js"></script>
+    <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
+    <script src="bower_components/moment/min/moment.min.js"></script>
+    <script src="bower_components/moment/locale/es.js"></script>
+    <script src="bower_components/ngDatepicker/src/js/ngDatepicker.js"></script>
+    <script src="bower_components/js-xls/dist/xls.js"></script>
+    <script src="bower_components/js-xlsx/dist/xlsx.js"></script>
+    <script src="bower_components/es6-promise/promise.js"></script>
+    <script src="bower_components/alasql/dist/alasql.min.js"></script>
+    <script src="bower_components/iCheck/icheck.min.js"></script>
+    <script src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
+    <script src="bower_components/sifter/sifter.js"></script>
+    <script src="bower_components/microplugin/src/microplugin.js"></script>
+    <script src="bower_components/selectize/dist/js/selectize.js"></script>
+    <script src="bower_components/angular-selectize2/dist/angular-selectize.js"></script>
+    <script src="bower_components/handlebars/handlebars.js"></script>
+    <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
+    <script src="bower_components/metisMenu/dist/metisMenu.js"></script>
+    <script src="bower_components/angular-preload-image/angular-preload-image.js"></script>
+    <script src="bower_components/angular-hotkeys/build/hotkeys.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+    <script src="bower_components/angular-ui-map/ui-map.js"></script>
+    <script src="bower_components/colorpicker/dist/colorPicker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+     <script async defer src='//maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyB_A21ndRYseHB8x0NHLUGuMABazPINwiA'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.full.min.js"></script>
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/shoply.js"></script>
@@ -201,7 +202,6 @@
         <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit" async defer
 ></script>
         <script src="http://181.54.214.103:8080/socket.io/socket.io.js"></script>
-        <script async defer src='//maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyDAEkAD9WrBiSRB0QXyLDPCUKd3Lh9hYcg'></script>
         <script type="text/javascript">
             $(window).bind("load", function () {
                 $('.splash').css('display', 'none')
